# planes-scraping

./: .dockerignore  .env  .env.chrome  .env.chrome.env  .env.chromium  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.versoned  Readme.md  chromium.env  config.py  docker-compose-swarm.yml  docker-compose.yml  entrypoint.py  entrypoint.sh  extencions.py  globals.py  main.py  midb.db  pyproject.toml  requirements-linux.txt  requirements.txt  test.html
.github/workflows/: raspi.yml
app/: main.py
app/data/: 1vuelos-2024-09-03.xlsx  ___vuelos-2024-09-03.xlsx  _vuelos-2024-09-03.xlsx  serie.csv  serie.xlsx  vuelos-2023-09-06.xlsx  vuelos-2024-09-02.xlsx  vuelos-2024-09-03.xlsx  vuelos-2024-09-04.xlsx  vuelos.html
app/test/: p.c
app/utils/: page.py  styles.py  utils.py  wdriver.py
data/: vuelos-2023-09-12.xlsx  vuelos-2023-09-15.xlsx  vuelos-2023-09-20.xlsx  vuelos-2023-10-30.xlsx  vuelos-2023-11-05.xlsx
dependences/: requirements.txt
docker/: .dockerignore  Dockerfile  Dockerfile-playwright  Dockerfile-py  Dockerfile-py-arm  Dockerfile-py-firefox  docker-compose-arm.pro.yml  docker-compose-firefox.pro.yml  docker-compose-pw-container.yml  docker-compose.dev.yml  docker-compose.pro.yml  docker-compose.yml
models/: aircraft.py  book.py
script/: install-chromedriver.sh
src/: __init__.py  error.py
src/app/: __init__.py  (+1 more)
static/: delete_planes.txt
test/: __main__.py  config.py  main.py  pathss.py  pruba.py  test-vcruzerick.py  webdriver.py  webdriver_arm.py  webdriver_manager.py
utils/: page.py  utils.py  wdriver.py
windows/: Execute.c
(+41 files in other folders)
